--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ a.notactive{
     #check:checked ~ ul{
         left: 0;
     }
-    
 }
 #about{
     margin-top: 80px;
@@ -141,6 +140,7 @@ a.notactive{
     #dp{
         width: 100%;
         height: 50vh;
+        margin-top: 10%;
     }
     #dp img{
         width: 275px;
@@ -213,7 +213,6 @@ h3{
     }
     .projects img{
         width: 70%;
-
     }
 }
 
@@ -233,8 +232,9 @@ h3{
     }
     h3{
         color: white;
-        background-color: rgb(14, 9, 1);
+        background-color: rgb(3, 24, 63);
         font-size: 25px;
+        margin-top: 10%;
     }
 
 }
@@ -273,6 +273,18 @@ h3{
     #techsec{
         padding-top: 15%;
         height: 175vh;
+    }
+    .techcards{
+        margin-top: 8%;
+    }
+}
+@media screen and (max-width: 450px){
+    #techsec{
+        margin-left: 0;
+        width: 100%;
+        border-radius: 0;
+        padding-top: 15%;
+        height: 150vh;
     }
     .techcards{
         margin-top: 8%;
