--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     font-family :  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #266150;
+    background-color: #c6d351;
 }
 
 nav{
@@ -172,6 +172,7 @@ h2{
 .projects{
     margin: 1%;
     margin-top: 2%;
+    padding-top: 2%;
     display: inline-block;
     width: 30%;
     height: 65vh;
@@ -183,6 +184,7 @@ h2{
 
 }
 h3{
+    font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(5, 53, 39);
 }
@@ -212,22 +214,24 @@ h3{
     }
     .projects img{
         width: 70%;
+        height: 350px;
     }
 }
 
 @media screen and (max-width: 450px){
 
     #projectsec{
-        height: 260vh;
+        height: 230vh;
     }
     .projects{
         margin-top: 7%;
         width: 90%;
-        height: 75vh;
+        height: 70vh;
     }
     .projects img{
         border-radius: 5%;
         width: 85%;
+        height: 350px ;
     }
     h3{
         padding-top: 0px;
