--- a/style.css
+++ b/style.css
@@ -166,13 +166,12 @@ a.notactive{
 h2{
     color: rgb(3, 24, 63);
     font-family: 'Times New Roman', Times, serif;
-    text-transform: uppercase;
     font-size: 35pt;
 }
 .projects{
     margin: 1%;
     margin-top: 2%;
-    padding-top: 2%;
+    padding-top: 0;
     display: inline-block;
     width: 30%;
     height: 65vh;
@@ -206,7 +205,7 @@ h3{
 @media screen and (max-width: 952px)
 {
     #projectsec{
-        height: 300vh;
+        height: 350vh;
     }
     .projects{
         width: 70%;
@@ -221,7 +220,7 @@ h3{
 @media screen and (max-width: 450px){
 
     #projectsec{
-        height: 230vh;
+        height: 250vh;
     }
     .projects{
         margin-top: 7%;
@@ -234,7 +233,6 @@ h3{
         height: 350px ;
     }
     h3{
-        padding-top: 0px;
         color: white;
         background-color: rgb(3, 24, 63);
         font-size: 25px;
