--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     font-family :  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #c6d351;
+    background-color: #064a5f;
 }
 
 nav{
@@ -164,7 +164,7 @@ a.notactive{
 
 }
 h2{
-    color: rgb(3, 24, 63);
+    color: rgb(215, 223, 238);
     font-family: 'Times New Roman', Times, serif;
     font-size: 35pt;
 }
@@ -230,7 +230,7 @@ h3{
     .projects img{
         border-radius: 5%;
         width: 85%;
-        height: 350px ;
+        height: 330px ;
     }
     h3{
         color: white;
@@ -262,12 +262,12 @@ h3{
 .techheading{
     font-size: 25px;
     background-color: rgb(218, 236, 57);
-    color: white;
+    color: rgb(10, 2, 29);
 }
 .techinfo{
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(230, 211, 42);
+    color: white;
 }
 
 @media screen and (max-width: 952px){
@@ -337,38 +337,14 @@ blockquote{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 footer{
+    color: white;
     margin-top: 5%;
-    border-top: 3px black solid ;
+    border-top: 3px white ;
     padding-top: 5%;
     text-align: center;
     bottom: 0;
-    background-color: rgb(5, 100, 87);
+    background-color: rgb(3, 24, 63);
     width: 100%;
     height: 20vh;
 }
