--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ a.notactive{
  }
 
 #projectsec{
+    margin-top: 2%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 100%;
@@ -164,11 +165,13 @@ a.notactive{
 
 }
 h2{
+    text-align: center;
     color: rgb(215, 223, 238);
     font-family: 'Times New Roman', Times, serif;
     font-size: 35pt;
 }
-.projects{
+.projects, .certcards{
+    box-sizing: border-box;
     margin: 1%;
     margin-top: 2%;
     padding-top: 0;
@@ -179,18 +182,24 @@ h2{
     font-family: monospace;
     color: rgb(1, 2, 17);
     overflow: hidden;
-    border: 1px solid rgba(119, 113, 113, 0.582);
-
+    border: 1px solid rgba(5, 148, 153, 0.911);
+}
+.projects h3{
+    line-height: 60px;
+}
+.certcards h3{
+    line-height: 60px;
 }
 h3{
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(5, 53, 39);
+    background-color: rgb(3, 24, 63);
+    color: white;
 }
 .projects img{
     overflow: hidden;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
     width: 60%;
     height: 300px;
     opacity: 0.9;
@@ -207,9 +216,15 @@ h3{
     #projectsec{
         height: 350vh;
     }
-    .projects{
+    .projects h3{
+        line-height: 50px;
+    }
+    .certcards h3{
+        line-height: 50px; 
+    }
+    .projects, .certcards{
         width: 70%;
-        height: 80vh;
+        height: 100vh;
     }
     .projects img{
         width: 70%;
@@ -220,12 +235,12 @@ h3{
 @media screen and (max-width: 450px){
 
     #projectsec{
-        height: 250vh;
+        height: 280vh;
     }
-    .projects{
+    .projects, .certcards{
         margin-top: 7%;
         width: 90%;
-        height: 70vh;
+        height: 80vh;
     }
     .projects img{
         border-radius: 5%;
@@ -241,13 +256,14 @@ h3{
 }
 
 #techsec{
+    margin-top: 2%;
     margin-left: 10%;
     border-radius: 100%;
     padding-top: 7%;
     width: 80%;
     height: 100vh;
     text-align: center;
-    background-color: white;
+    background-color: rgb(3, 24, 63);
 }
 .techcards{
     border-radius: 50%;
@@ -281,16 +297,55 @@ h3{
 }
 @media screen and (max-width: 450px){
     #techsec{
-        margin-left: 0;
-        width: 100%;
+        margin-top: 4%;
+        margin-left: 10%;
+        width: 80%;
         border-radius: 0;
-        padding-top: 15%;
-        height: 150vh;
+        height: 140vh;
     }
     .techcards{
         margin-top: 8%;
     }
 }
+
+#certificates{
+    margin-top: 7%;
+    text-align: center;
+}
+
+.certcards{
+    margin-top: 5%;
+    box-sizing: border-box;
+    padding-top: 0;
+    border-radius: 5% ;
+    background-color: rgb(171, 192, 231);
+}
+
+.certlisthead{
+    line-height: 50px;
+}
+.certcardsbody{
+    margin: 5%;
+    text-align: left;
+    height: 70%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #interactsec{
     width: 100%;
@@ -298,7 +353,14 @@ h3{
     display: block;
     margin-top: 2%;
     text-align: center;
-    padding-top: 8%;
+    padding-top: 5%;
+    background-color: white;
+    margin-bottom: 0px;
+}
+
+#interactsec h2{
+    margin-top: 0px;
+    background-color: rgb(3, 24, 63);
 }
 
 #interactcard{
@@ -333,14 +395,10 @@ blockquote{
     }
 }
 
-
-
-
-
 footer{
     color: white;
     margin-top: 5%;
-    border-top: 3px white ;
+    border-top: 1px dashed white;
     padding-top: 5%;
     text-align: center;
     bottom: 0;
