Commit12 : Minor Bug Fixes

--- a/style.css
+++ b/style.css
@@ -192,14 +192,7 @@ h2{
 .certcards h3{
     line-height: 60px;
 }
-.projects:hover{
-    box-shadow: 0 0;
-    margin-top: -3px;
-}
-.certcards:hover{
-    box-shadow: 0 0;
-    margin-top: -3px;
-}
+
 h3{
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
@@ -286,8 +279,8 @@ h3{
     margin-top: 5%;
     display: inline-block;
     background-color: rgb(202, 143, 15);
-    width: 250px;
-    height: 100px;
+    width: 350px;
+    height: 150px;
 
 }
 
@@ -310,6 +303,9 @@ h3{
         height: 175vh;
     }
     .techcards{
+        font-size: 12px;
+        width: 250px;
+        height: 100px;
         margin-top: 8%;
     }
 }
@@ -333,7 +329,7 @@ h3{
 }
 
 .certcards{
-    margin-top: 5%;
+    margin-top: 7%;
     box-sizing: border-box;
     padding-top: 0;
     border-radius: 5% ;
@@ -360,19 +356,19 @@ h3{
 .subcertsheading{
     margin-top: 7%;
     color:rgb(4, 1, 15) ;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bolder;
 }
 .subcerts h5{
     font-family: 'Times New Roman', Times, serif;
     color: rgb(1, 7, 2);
-    font-size: 13px;
+    font-size: 18px;
 }
 
 summary{
     font-family: 'Times New Roman', Times, serif;
     color: rgb(1, 7, 2);
-    font-size: 13px;
+    font-size: 18px;
     font-weight: bolder;
 }
 .subcerts p{
@@ -382,7 +378,18 @@ summary{
     font-size: 8px;
 }
 .extendedline{
-    font-size: 10px;
+    font-size: 15px;
+}
+@media screen and (max-width: 952px){
+    .subcerts h5{
+        font-size: 13px;
+    }
+    summary{
+        font-size: 13px;
+    }
+    .extendedline{
+        font-size: 11px;
+    }
 }
 .cp{
     border-radius: 18%;
